implemented bootstraps grid system

--- a/index.html
+++ b/index.html
@@ -27,64 +27,76 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row, justify-content-center">
-				<header>
-					<h1>The Juicy Weasel</h1>
+			<div class="row">
+				<div class="col-sm-12">
+					<header>
+						<h1>The Juicy Weasel</h1>
 
-					<div class="jumbotron">
-						<h2>We are opening a new location!</h2>
-					</div>
-				</header>
+						<div class="jumbotron">
+							<h2>We are opening a new location!</h2>
+						</div>
+					</header>
+				</div>
 			</div>
 
 
 			<!-- Navigation Bar for our restaurant website-->
 			<div class="row">
-				<nav>
-					<ul class="nav nav-pills">
-				        <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
-				        <li><a href="menu.html" id="menuPill">Menu</a></li>
-				        <li><a href="contact.html" id=contactPill>Contact</a></li>
+				<div class="col-sm-12">
+					<nav>
+						<ul class="nav nav-pills">
+					        <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
+					        <li><a href="menu.html" id="menuPill">Menu</a></li>
+					        <li><a href="contact.html" id=contactPill>Contact</a></li>
 
-				    </ul>
-				</nav>
+					    </ul>
+					</nav>
+				</div>
 			</div>
 
 			<!-- Caroiusel -->
-			<div class="row, justify-content-center">
-				<div id="carousel1" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<h3>We're opening a new location!</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>The Drink of the Month is SG Special Brew.</h3>
+			<div class="row">
+				<div class="col-sm-12">
+					<div id="carousel1" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<h3>We're opening a new location!</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>The Drink of the Month is SG Special Brew.</h3>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="row justify-content-center">
-				<!-- An image and description of The Juicy Weasel-->
-				<img src="images/juicyweasel2.jpg"  alt="A picture of the JW">
+			<div class="row text-center">
+				<div class="col-sm-12">
+						<!-- An image and description of The Juicy Weasel-->
+						<img src="images/juicyweasel2.jpg"  alt="A picture of the JW">
+				</div>
 			</div>
 
-			<div class="row justify-content-center">
-				<div id="jwDescription" style="width:400px;">
-					<p><strong>Restaurant Description:</strong><br /> Come enjoy a delicious meal at one of Gothams finest restaurants (also known as Batmans food cave)! Whether you want something quick and simple or a full meal, we have it all! Enjoy food from our menu that has been ranked #1 in taste by the people of Gotham city. Only have 10-15 minutes to spare? No problem! Just let one of our hosts know and we will get you taken care of and out in a jiff (just ask Comissioner Gordon!) </p>
+			<div class="text-center">
+				<div class="col-sm-12">
+					<div id="jwDescription" >
+						<p class="text-center"><strong>Restaurant Description:</strong><br /> Come enjoy a delicious meal at one of Gothams finest restaurants (also known as Batmans food cave)! Whether you want something quick and simple or a full meal, we have it all! Enjoy food from our menu that has been ranked #1 in taste by the people of Gotham city. Only have 10-15 minutes to spare? No problem! Just let one of our hosts know and we will get you taken care of and out in a jiff (just ask Comissioner Gordon!) </p>
+					</div>
 				</div>
 			</div>
 				
 			
-			<div class="row, justify-content-center"">	
-			<!-- Number and location of the restaurant-->
-				<footer>
-					<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
-					<h3>320-888-8888</h3>
-				</footer>
+			<div class="row">
+				<div class="col-sm-12">	
+				<!-- Number and location of the restaurant-->
+					<footer>
+						<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
+						<h3>320-888-8888</h3>
+					</footer>
+				</div>
 			</div>
 
 
