--- a/menu.html
+++ b/menu.html
@@ -52,40 +52,46 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row, justify-content-center">
-				<header>
-					<h1>The Juicy Weasel</h1>
+			<div class="row">
+				<div class="col-sm-12">
+					<header>
+						<h1>The Juicy Weasel</h1>
 
-					<div class="jumbotron">
-						<h2>We are opening a new location!</h2>
-					</div>
-				</header>
+						<div class="jumbotron">
+							<h2>We are opening a new location!</h2>
+						</div>
+					</header>
+				</div>
 			</div>
 
 			<!-- Navigation Bar for our restaurant website-->
 			<div class="row">
-				<nav>
-					<ul class="nav nav-pills">
-				        <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
-				        <li><a href="menu.html" id="menuPill">Menu</a></li>
-				        <li><a href="contact.html" id=contactPill>Contact</a></li>
-				    </ul>
-				</nav>
+				<div class="col-sm-12">
+					<nav>
+						<ul class="nav nav-pills">
+					        <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
+					        <li><a href="menu.html" id="menuPill">Menu</a></li>
+					        <li><a href="contact.html" id=contactPill>Contact</a></li>
+					    </ul>
+					</nav>
+				</div>
 			</div>
 
 
 			<!-- Caroiusel -->
-			<div class="row, justify-content-center">
-				<div id="carousel1" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<h3>We're opening a new location!</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>The Drink of the Month is SG Special Brew.</h3>
+			<div class="row">
+				<div class="col-sm-12">
+					<div id="carousel1" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<h3>We're opening a new location!</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>The Drink of the Month is SG Special Brew.</h3>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -93,113 +99,119 @@
 
 
 			<!-- The menu for The Juicy Weasel. broken up into seperate divs and put into a table for display/formatiing purposes.-->
-			<div class="row, justify-content-center">
-				<table width="100%" id="table1">
-						<tr>
-							<td>
-								<div id="burger-fries">
-									<h3>Burger and Fries</h3>
-									<p>An American Classic!<br />
-									Your choice - with or without cheese<br />
-									Pickle, onion, tomato, and lettuce<br />
-									Served with our famous thick cut 
-									<br /> french fries<br />$7.95</p>	
-								</div>
-							</td>
+			<div class="row">
+				<div class="col-sm-12">
+					<table width="100%" id="table1">
+							<tr>
+								<td>
+									<div id="burger-fries">
+										<h3>Burger and Fries</h3>
+										<p>An American Classic!<br />
+										Your choice - with or without cheese<br />
+										Pickle, onion, tomato, and lettuce<br />
+										Served with our famous thick cut 
+										<br /> french fries<br />$7.95</p>	
+									</div>
+								</td>
 
-							<td>
-								<div id="hotdog-chips">
-									<h3>Hot dog and Chips</h3>
-									<p>A Summer Classic!<br />
-									Your choice - white or wheat bun<br />
-									Relish, mustard, and ketchup<br />
-									Served with our house-made chips
-									<br /> french fries<br />$7.95</p>
-								</div>
-							</td>
+								<td>
+									<div id="hotdog-chips">
+										<h3>Hot dog and Chips</h3>
+										<p>A Summer Classic!<br />
+										Your choice - white or wheat bun<br />
+										Relish, mustard, and ketchup<br />
+										Served with our house-made chips
+										<br /> french fries<br />$7.95</p>
+									</div>
+								</td>
 
-							<td>
-								<div id="saus-pep">
-									<h3>Italian Sausage and Peppers</h3>
-									<p>An All-Time Favorite!<br />
-									Your choice - Mild or Spice Cole Slaw<br />
-									Served with garlic mashers
-									<br /> french fries<br />$10.95</p><br />
-								</div>
-							</td>	
-						</tr>
+								<td>
+									<div id="saus-pep">
+										<h3>Italian Sausage and Peppers</h3>
+										<p>An All-Time Favorite!<br />
+										Your choice - Mild or Spice Cole Slaw<br />
+										Served with garlic mashers
+										<br /> french fries<br />$10.95</p><br />
+									</div>
+								</td>	
+							</tr>
 
-						<tr>
-							<td>
-								<div id="ten-chips">
-									<h3>Tenderloin Sandwich and Chips</h3> 
-									<p>Really Hits the Spot!<br />
-									Plain or Sesame Seed Bun<br />
-									Pickle, onion, tomato, and lettuce<br />
-									Served with our house-made chips 
-									<br /> french fries<br />$8.95</p>	
-								</div>
-							</td>
+							<tr>
+								<td>
+									<div id="ten-chips">
+										<h3>Tenderloin Sandwich and Chips</h3> 
+										<p>Really Hits the Spot!<br />
+										Plain or Sesame Seed Bun<br />
+										Pickle, onion, tomato, and lettuce<br />
+										Served with our house-made chips 
+										<br /> french fries<br />$8.95</p>	
+									</div>
+								</td>
 
-							<td>
-								<div id="salad">
-									<h3>House Salad</h3>
-									<p>On the Lighter Side<br />
-									Your choice - with or without cheese<br />
-									Iceberg lettuce, tomatoes, peppers<br />
-									Thousand Island or Ranch
-									<br />Dressing Served with a dinner roll<br />$6.95</p>
-								</div>
-							</td>
+								<td>
+									<div id="salad">
+										<h3>House Salad</h3>
+										<p>On the Lighter Side<br />
+										Your choice - with or without cheese<br />
+										Iceberg lettuce, tomatoes, peppers<br />
+										Thousand Island or Ranch
+										<br />Dressing Served with a dinner roll<br />$6.95</p>
+									</div>
+								</td>
 
-							<td>
-								<div id="brisket-fries">
-									<h3>Brisket Sandwich amnd Fries</h3> 
-									<p>A Taste of Texas!<br />
-									Smoked Brisket on thick-cut<br />
-									texas toast, Cole Slaw
-									<br /> Served with our famous thick-cut french fries<br />$7.95</p><br />
-								</div>
-							</td>	
-						</tr>
-					</table>
+								<td>
+									<div id="brisket-fries">
+										<h3>Brisket Sandwich amnd Fries</h3> 
+										<p>A Taste of Texas!<br />
+										Smoked Brisket on thick-cut<br />
+										texas toast, Cole Slaw
+										<br /> Served with our famous thick-cut french fries<br />$7.95</p><br />
+									</div>
+								</td>	
+							</tr>
+						</table>
+					</div>
 				</div>
 
-				<div class="row, justify-content-center">
-					<table id="table2">
-						<tr>
-							<th>Beverages</th>
-							<th>Price</th>
-						</tr>
+				<div class="row">
+					<div class="col-sm-12">
+						<table id="table2">
+							<tr>
+								<th>Beverages</th>
+								<th>Price</th>
+							</tr>
 
-						<tr>
-							<td><p>Root Beer</p></td>
-							<td><p>$3.00</p></td>
-						</tr>
+							<tr>
+								<td><p>Root Beer</p></td>
+								<td><p>$3.00</p></td>
+							</tr>
 
-						<tr>
-							<td><p>Bottled Water</p></td>
-							<td><p>$1.25</p></td>
-						</tr>
+							<tr>
+								<td><p>Bottled Water</p></td>
+								<td><p>$1.25</p></td>
+							</tr>
 
-						<tr>
-							<td><p>Lemonade</p></td>
-							<td><p>$1.00</p></td>
-						</tr>
+							<tr>
+								<td><p>Lemonade</p></td>
+								<td><p>$1.00</p></td>
+							</tr>
 
-						<tr>
-							<td><p>Iced Tea</p></td>
-							<td><p>$1.25</p></td>
-						</tr>
-					</table>
+							<tr>
+								<td><p>Iced Tea</p></td>
+								<td><p>$1.25</p></td>
+							</tr>
+						</table>
+					</div>
 				</div>
 
 			<!-- Number and location of the restaurant-->
-			<div class="row, justify-content-center">
-				<footer>
-					<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
-					<h3>320-888-8888</h3>
-				</footer>
+			<div class="row">
+				<div class="col-sm-12">
+					<footer>
+						<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
+						<h3>320-888-8888</h3>
+					</footer>
+				</div>
 			</div>
 		</div>
 
