--- a/contact.html
+++ b/contact.html
@@ -52,105 +52,115 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row, justify-content-center">
-				<header>
-					<h1>The Juicy Weasel</h1>
+			<div class="row">
+				<div class="col-sm-12">
+					<header>
+						<h1>The Juicy Weasel</h1>
 
-					<div class="jumbotron">
-						<h2>We are opening a new location!</h2>
-					</div>
-				</header>
+						<div class="jumbotron">
+							<h2>We are opening a new location!</h2>
+						</div>
+					</header>
+				</div>
 			</div>
 
 
 			<div class="row">
-				<nav>
-					<ul class="nav nav-pills">
-				         <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
-				        <li><a href="menu.html" id="menuPill">Menu</a></li>
-				        <li><a href="contact.html" id=contactPill>Contact</a></li>
-				    </ul>
-				</nav>
+				<div class="col-sm-12">
+					<nav>
+						<ul class="nav nav-pills">
+					         <li id="liHome"><a href="index.html" id="homePill"><img src="images/houseIcon.png" class="active" id="homeImage"></a></li>
+					        <li><a href="menu.html" id="menuPill">Menu</a></li>
+					        <li><a href="contact.html" id=contactPill>Contact</a></li>
+					    </ul>
+					</nav>
+				</div>
 			</div>
 
 			<!-- Caroiusel -->
-			<div class="row, justify-content-center">
-				<div id="carousel1" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<h3>We're opening a new location!</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
-						</div>
-						<div class="carousel-item">
-							<h3>The Drink of the Month is SG Special Brew.</h3>
+			<div class="row">
+				<div class="col-sm-12">
+					<div id="carousel1" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<h3>We're opening a new location!</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>We're rolling out our seasonal menu, with special options for this season.</h3>
+							</div>
+							<div class="carousel-item">
+								<h3>The Drink of the Month is SG Special Brew.</h3>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="row justify-content-center">
-				<div id="container1">
-					<form class="form-group" id="form1" onsubmit="return validateInfo()">
-						<label for="name">Name:</label>
-						<input id="name" type="text" name="name"><br />
+			<div class="row">
+				<div class="col-sm-12">
+					<div id="container1">
+						<form class="form-group" id="form1" onsubmit="return validateInfo()">
+							<label for="name">Name:</label>
+							<input id="name" type="text" name="name"><br />
 
-						<label for="email">Email:</label>
-						<input id="email" type="text" name="email"><br />
+							<label for="email">Email:</label>
+							<input id="email" type="text" name="email"><br />
 
-						<label for="phone">Phone:</label>
-						<input id="phone" type="number" name="phone"><br />
+							<label for="phone">Phone:</label>
+							<input id="phone" type="number" name="phone"><br />
 
-						<label for="inquiry">Reason for Inquiry:</label>
-						<select id="inquiry" name="inquiry">
-							<option value="Catering">Catering</option>
-							<option value="Private Party">Private Party</option>
-							<option value="Feedback">Feedback</option>
-							<option value="Other">Other</option>
-						</select><br />
+							<label for="inquiry">Reason for Inquiry:</label>
+							<select id="inquiry" name="inquiry">
+								<option value="Catering">Catering</option>
+								<option value="Private Party">Private Party</option>
+								<option value="Feedback">Feedback</option>
+								<option value="Other">Other</option>
+							</select><br />
 
-						<label for="info">Additional Information:</label><br />
-						<textarea id="info" name="info"></textarea><br />
+							<label for="info">Additional Information:</label><br />
+							<textarea id="info" name="info"></textarea><br />
 
 
-						<fieldset style="border: 0;">
-							<legend>Have you been to the restaurant?
-								<input type="radio" id="choice1" name="questionnaire" value="no" checked="checked">
-								<label for="choice1">No</label>
-								<input type="radio" id="choice2" name="questionnaire" value="yes">
-								<label for="choice2">Yes</label>
+							<fieldset style="border: 0;">
+								<legend>Have you been to the restaurant?
+									<input type="radio" id="choice1" name="questionnaire" value="no" checked="checked">
+									<label for="choice1">No</label>
+									<input type="radio" id="choice2" name="questionnaire" value="yes">
+									<label for="choice2">Yes</label>
+								</legend>
+							</fieldset>
+
+
+							<fieldset style="border:0;">
+								<legend>Best days to contact you:
+								<input type="checkbox" id="days" name="days" value="Monday">
+								<label for="monday">M</label>
+								<input type="checkbox" id="days" name="days" value="Tuesday">
+								<label for="tuesday">T</label>
+								<input type="checkbox" id="days" name="days" value="Wednesday">
+								<label for="wednesday">W</label>
+								<input type="checkbox" id="days" name="days" value="Thursday">
+								<label for="thursday">Th</label>
+								<input type="checkbox" id="days" name="days" value="Friday">
+								<label for="friday">F</label>
 							</legend>
-						</fieldset>
+							</fieldset>
 
+							<input type="submit" name="submit" value="Send Request" id="submit1">
 
-						<fieldset style="border:0;">
-							<legend>Best days to contact you:
-							<input type="checkbox" id="days" name="days" value="Monday">
-							<label for="monday">M</label>
-							<input type="checkbox" id="days" name="days" value="Tuesday">
-							<label for="tuesday">T</label>
-							<input type="checkbox" id="days" name="days" value="Wednesday">
-							<label for="wednesday">W</label>
-							<input type="checkbox" id="days" name="days" value="Thursday">
-							<label for="thursday">Th</label>
-							<input type="checkbox" id="days" name="days" value="Friday">
-							<label for="friday">F</label>
-						</legend>
-						</fieldset>
-
-						<input type="submit" name="submit" value="Send Request" id="submit1">
-
-					</form>
+						</form>
+					</div>
 				</div>
 			</div>
 
-			<div class="row, justify-content-center">
+			<div class="row">
+				<div class="col-sm-12">
 				<!-- Number and location of the restaurant-->
-				<footer>
-					<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
-					<h3>320-888-8888</h3>
-				</footer>
+					<footer>
+						<h3>188 Bumpy Boulevard, Gotham City, New Jersey. 56888</h3>
+						<h3>320-888-8888</h3>
+					</footer>
+				</div>
 			</div>
 		</div>
 
